紧急修复：添加alarms权限
1. 在manifest.json中添加'alarms'权限
2. 修复background.js中的chrome.alarms.create错误
3. 添加alarms.onAlarm监听器
4. 创建紧急修复页面emergency_fix.html
5. 添加错误处理和后备方案

--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,8 @@
   "description": "Monitor D2R rune prices on G2G and DD373, calculate arbitrage profits",
   "permissions": [
     "storage",
-    "activeTab"
+    "activeTab",
+    "alarms"
   ],
   "host_permissions": [
     "https://www.g2g.com/*",
